<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_Calculator" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/num1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/editText_num1" />

        <EditText
            android:id="@+id/op"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/editText_op" />

        <EditText
            android:id="@+id/num2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/editText_num2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_Calculate"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/button_Calculate" />

        <TextView
            android:id="@+id/textView_Result"
            android:layout_width="100dp"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="50dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>