<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/top_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextView_Title"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/button_Exercise1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_Exercise1" />

        <Button
            android:id="@+id/button_Exercise2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_Exercise2" />

        <Button
            android:id="@+id/button_Exercise3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_Exercise3" />
    </LinearLayout>
</RelativeLayout>
